[package]
name = "task-manager-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
rocket_contrib = "0.5"
diesel = { version = "1.4", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
